<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stivinsonmartinez.medetour.SitiosActivity">
    <item android:id="@+id/action_menu" android:title="@string/menu"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/title_activity_about"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_laguna" android:title="@string/vistalaguna"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_mirador" android:title="@string/vistamirador"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_jardin" android:title="@string/vistajardin"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
