<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/maroon"
    android:padding="48dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medellin"
        android:textSize="50dp"
        android:textColorHighlight="@color/green"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/green"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/cine"
        android:background="@color/mediumseagreen"
        android:onClick="Cines"
        android:textSize="20dp"
        android:textColor="@color/black"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/teatro"
        android:background="@color/cadetblue"
        android:onClick="Teatros"
        android:textSize="20dp"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/restaurante"
        android:onClick="Restaurantes"
        android:background="@color/deepskyblue"
        android:textSize="20dp"
        android:textColor="@color/black"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Rumba"
        android:background="@color/cornflowerblue"
        android:onClick="Rumba"
        android:textSize="20dp"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/sitios"
        android:onClick="Sitios"
        android:background="@color/blueviolet"
        android:textSize="20dp"
        android:textColor="@color/black"/>


</LinearLayout>
