<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="48sp"
    android:background="@color/darkcyan">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:src="@drawable/molinos"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/dirmoli"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/khaki"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/telmoli"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/khaki"/>

    }
    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/mapa"
    android:id="@+id/molinoscine"
    android:onClick="molinos"/>
</LinearLayout>