<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@color/chocolate">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:layout_weight="1.3"
        android:src="@drawable/ocio"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dirocio"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="@color/silver"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telocio"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="@color/silver"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/ocio"
        android:layout_weight="1"
        android:textSize="23sp"
        android:textColor="@color/silver"/>
</LinearLayout>