<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp"
    android:background="@color/mediumseagreen"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:layout_weight="1.3"
        android:src="@drawable/insitu"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dirin"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="@color/maroon"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telin"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="@color/maroon"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/insitu"
        android:layout_weight="1"
        android:textSize="23sp"
        android:textColor="@color/maroon"/>
</LinearLayout>
